🚌 Complete Yatra Bus Tracking App - Rapido-style passenger app with live tracking, ETA countdown, nearest stops, and route search

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SmartCommute - Reliable Bus Tracking for Small Cities</title>
+    <title>🚌 Yatra - Your Smart Journey Companion | Real-Time Bus Tracking</title>
     <meta name="description" content="Transform unreliable bus schedules with real-time tracking, smart notifications, and accurate arrival predictions for small cities and tier-2 towns." />
-    <meta name="author" content="SmartCommute" />
+    <meta name="author" content="Yatra" />
     <meta name="keywords" content="bus tracking, public transport, small cities, real-time transit, smart commuting" />
 
-    <meta property="og:title" content="SmartCommute - Reliable Bus Tracking for Small Cities" />
+    <meta property="og:title" content="🚌 Yatra - Your Smart Journey Companion | Real-Time Bus Tracking" />
     <meta property="og:description" content="Transform unreliable bus schedules with real-time tracking, smart notifications, and accurate arrival predictions for small cities and tier-2 towns." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
@@ -16,6 +16,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
 
   <body>
